--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,7 @@ copyright = "All right reserved copyright © Portio 2020"
 footerLogo = "images/contact/widget-logo.png"
 formspreeURL = "YOUR FORMSPREE URL"
 googleAnalytics = "YOUR GOOGLE ANALYTICS CODE"
-logo = "images/site-navigation/logo.jpeg"
+logo = "images/site-navigation/"
 
 [params.address]
 address = "23 Khan Niketon, Grand Street, NYK."
